--- a/src/index.css
+++ b/src/index.css
@@ -118,4 +118,15 @@ All colors MUST be HSL for proper theming support.
   html {
     scroll-behavior: smooth;
   }
+
+  .line-clamp-2 {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
+
+  .border-3 {
+    border-width: 3px;
+  }
 }
